Downloaded font-awesome so it can render on firefox. Also fixed the logic where the likes where not being displayed correctly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,7 +78,8 @@ body {
 }
 
 .image {
-    perspective: 100rem;
+    /*perspective: 100rem;
+    -moz-perspective: 100rem;*/
     position: relative;  
 }
 
